[package]
edition = "2021"
name = "slp_validate"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }

env_logger = "0.11.3"
log = "0.4.21"
ssbm_utils = { git = "https://github.com/Walnut356/SlpProcess.git" }
# slightly optimized fork of bytes with less dead code and possibly better performance characteristics for contiguous memory.
anyhow = "1.0.81"
byteorder = "1.5.0"
bytes = { git = "https://github.com/Walnut356/bytes.git", branch = "bytes_get" }
encoding_rs = "0.8.32"
serde_json = "1.0.114"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.58"
